--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ title: "Oloren AI"
       {% for post in site.posts %}
       <a
         class="w-full h-fit shadow-md rounded-xl p-4 ring ring-[#E5E5E5]"
-        href="{{post.url}}"
+        href="{{site.baseurl}}{{ post.url }}"
       >
         <h1 class="font-bold text-xl md:text-2xl">{{post.title}}</h1>
         <p class="text-gray-400 text-lg md:text-xl font-body">
