--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@ title: "Oloren AI"
         <img src="{{ "/assets/images/oloren-dark-logo.svg" | relative_url }}"
         class="h-full w-fit" id="logo" />
       </a>
-      <a href="#oam">AutoML</a>
+      <a href="{{site.baseurl}}#oam">AutoML</a>
       <a href="https://beta.oloren.ai">Analysis Suite</a>
-      <a href="#blogs">Blogs</a>
+      <a href="{{site.baseurl}}#blogs">Blogs</a>
     </section>
   </div>
 
