switch to chem engine

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: "Oloren AI"
         <img src="{{ "/assets/images/oloren-dark-logo.svg" | relative_url }}"
         class="h-full w-fit" id="logo" />
       </a>
-      <a href="{{site.baseurl}}#oam">AutoML</a>
+      <a href="{{site.baseurl}}#chemengine">Chem Engine</a>
       <a href="https://beta.oloren.ai">Analysis Suite</a>
       <a href="{{site.baseurl}}#blogs">Blogs</a>
     </section>
@@ -46,11 +46,11 @@ title: "Oloren AI"
 
   <section
     class="m-auto w-4/5 lg:w-2/3 h-screen flex flex-col justify-center"
-    id="oam"
+    id="chemengine"
   >
     <div class="h-fit my-auto">
       <h1 class="text-black text-3xl md:text-5xl font-bold">
-        Oloren AutoML (OAM)
+        Oloren ChemEngine
       </h1>
       <h2 class="text-gray-400 text-xl md:text-2xl mt-2">
         Our All-in-One Python Framework for QSAR
@@ -58,7 +58,7 @@ title: "Oloren AI"
       <div id="oam-panels" class="flex flex-row space-x-12 h-fit mt-4 mb-2">
         <div class="p-4 w-96 rounded-md shadow-md h-full ring ring-[#E5E5E5]">
           <h2 class="text-xl md:text-2xl">SOTA Performance</h2>
-          Models built with OAM are at the top of every QSAR leaderboard,
+          Models built with ChemEngine are at the top of every QSAR leaderboard,
           including TDC, OGB, and more.
           <br />
           <br />
@@ -70,8 +70,8 @@ title: "Oloren AI"
         </div>
         <div class="p-4 w-96 rounded-lg shadow-md h-full ring ring-[#E5E5E5]">
           <h2 class="text-xl md:text-2xl">Open Source</h2>
-          OAM is more than 95% open source and designed extensabley, allowing
-          the community to build and improve upon it over time.
+          ChemEngine is fully open source and designed to be extensible,
+          allowing the community to build and improve upon it over time.
           <div
             class="w-full bg-gray-300 h-48 rounded-md mt-2 grid place-content-center"
           >
@@ -79,10 +79,10 @@ title: "Oloren AI"
           </div>
         </div>
         <div class="p-4 w-96 rounded-lg shadow-md h-full ring ring-[#E5E5E5]">
-          <h2 class="text-xl md:text-2xl">Integrated with OAS</h2>
-          Models generated with OAM are modular, shareable, and backwards
-          compatible. With our Oloren Analysis Suite integration, models can be
-          shared with just a link.
+          <h2 class="text-xl md:text-2xl">Reproduce and Share</h2>
+          Models generated with OAM are reproducible and shareable. With our
+          Oloren Analysis Suite integration, models can be shared with just a
+          link.
           <div
             class="w-full bg-gray-300 h-48 rounded-md mt-2 grid place-content-center"
           >
