changed colors to dark blue

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: "Oloren AI"
 ---
 
-<div class="flex w-screen flex-col bg-white">
+<div class="flex w-screen flex-col bg-white text-primary">
   <section
     id="navbar"
     class="mx-auto mt-6 flex h-24 w-3/4 max-w-7xl items-center justify-between md:max-w-7xl"
@@ -14,7 +14,7 @@ title: "Oloren AI"
     </a>
     <ul
       id="links"
-      class="font-lg flex flex-row items-center space-x-10 text-[#525252]"
+      class="font-lg flex flex-row items-center space-x-10 text-secondary"
     >
       <a href="{{site.url}}/#technology">Technology</a>
       <a href="{{site.url}}/#products">Products</a>
@@ -32,12 +32,12 @@ title: "Oloren AI"
   <section id="hero" class="mx-auto flex h-[48em] w-3/4 max-w-7xl">
     <div class="space-y-12 py-60">
       <div id="hero-text" class="w-full space-y-5 pr-4">
-        <h1 class="w-full text-4xl font-normal text-black">
+        <h1 class="w-full text-4xl font-normal text-primary">
           Extract <b class="font-semibold">actionable insights</b> <br />
           from assay data.
         </h1>
 
-        <h2 class="w-full text-lg text-[#525252]">
+        <h2 class="w-full text-lg text-secondary">
           Accurately predict assay results from historical chemical data, <br />
           saving time and money on experiments .
         </h2>
@@ -49,7 +49,7 @@ title: "Oloren AI"
         >
           Get Started
         </button>
-        <a class="text-lg text-black"> Contact Us </a>
+        <a class="text-lg text-primary"> Contact Us </a>
       </div>
     </div>
   </section>
@@ -60,7 +60,7 @@ title: "Oloren AI"
       <div class="flex w-1/2 flex-col space-y-8">
         <div class="flex flex-col space-y-4">
           <h3 class="text-lg font-semibold">ChemEngine</h3>
-          <p class="text-lg text-[#525252]">
+          <p class="text-lg text-secondary">
             Our state-of-the-art molecular descriptor, which leverages
             informations from millions of publically curated datasets, is
             guaranteed to boost your prediction accuracy.
@@ -92,7 +92,7 @@ title: "Oloren AI"
         </div>
         <div class="flex flex-col space-y-4">
           <h3 class="text-lg font-semibold">OlorenVec Descriptors</h3>
-          <p class="text-lg text-[#525252]">
+          <p class="text-lg text-secondary">
             Our state-of-the-art molecular descriptor, which leverages
             informations from millions of publically curated datasets, is
             guaranteed to boost your prediction accuracy.
@@ -118,7 +118,7 @@ title: "Oloren AI"
     >
       <div class="flex w-full flex-col space-y-3 md:w-1/3">
         <h2 class="text-2xl font-medium">Products</h2>
-        <h3 class="text-lg font-normal text-[#525252]">
+        <h3 class="text-lg font-normal text-secondary">
           Oloren AI automatically fills in the blanks from your uploaded
           experimental data, and predicts properties for given compounds.
         </h3>
@@ -130,7 +130,7 @@ title: "Oloren AI"
           <img src="{{ "/assets/images/techicon.svg" | relative_url }}"
           class="h-10 w-10 p-0 m-0" align="left" id="logo" />
           <h3 class="text-lg font-semibold">ChemEngine Enterprise</h3>
-          <p class="text-lg text-[#525252]">
+          <p class="text-lg text-secondary">
             We've built a suite of Python Libraries, leveraging our proprietary
             automated machine learning frameworks, to simplify the tedious
             process of finding the best model for your dataset.
@@ -141,7 +141,7 @@ title: "Oloren AI"
           <img src="{{ "/assets/images/techicon.svg" | relative_url }}"
           class="h-10 w-10 p-0 m-0" align="left" id="logo" />
           <h3 class="text-lg font-semibold">Analysis Suite</h3>
-          <p class="text-lg text-[#525252]">
+          <p class="text-lg text-secondary">
             No experience is necessary to make use of the Oloren Analysis Suite,
             which bundles our propietary technology in an easy-to-use graphical
             interface.
@@ -165,7 +165,7 @@ title: "Oloren AI"
 
       <div
         id="links"
-        class="font-lg flex flex-col items-start space-y-2 text-left text-[#525252]"
+        class="font-lg flex flex-col items-start space-y-2 text-left text-secondary"
       >
         <a href="{{site.url}}/#technology">Technology</a>
         <a href="{{site.url}}/#products">Products</a>
