--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@ title: "Oloren AI"
     </ul>
   </section>
 
-  <section id="hero" class="mx-auto flex h-[48em] w-3/4 max-w-7xl">
+  <section
+    id="hero"
+    class="mx-auto flex h-[48em] w-3/4 max-w-7xl justify-between"
+  >
     <div class="space-y-12 py-60">
       <div id="hero-text" class="w-full space-y-5 pr-4">
         <h1 class="w-full text-4xl font-normal text-primary">
@@ -52,6 +55,8 @@ title: "Oloren AI"
         <a class="text-lg text-primary"> Contact Us </a>
       </div>
     </div>
+    <img src="{{ "/assets/images/herofig.svg" | relative_url }}" class="w-2/5
+    mx-0" align="left" id="logo" />
   </section>
 
   <section id="technology" class="h-fit w-full bg-[#F6F9FE] py-24">
@@ -73,7 +78,7 @@ title: "Oloren AI"
               href="https://chemengine.org"
               target="_blank"
             >
-              <div class="flex flex-row rounded-xl bg-[#F6F9FE] px-6 py-3">
+              <div class="flex flex-row rounded-[11px] bg-[#F6F9FE] px-6 py-3">
                 Visit Site
                 <i data-feather="arrow-up-right" class="pl-2"></i>
               </div>
@@ -83,7 +88,7 @@ title: "Oloren AI"
               href="https://chemrxiv.org/engage/chemrxiv/article-details/6350b9d186473a47d31a8492"
               target="_blank"
             >
-              <div class="flex flex-row rounded-xl bg-[#F6F9FE] px-6 py-3">
+              <div class="flex flex-row rounded-[11px] bg-[#F6F9FE] px-6 py-3">
                 Download Paper
                 <i data-feather="download" class="pl-2"></i>
               </div>
@@ -101,7 +106,7 @@ title: "Oloren AI"
             class="flex flex-row space-x-3 child:h-fit child:w-fit child:rounded-xl"
           >
             <button class="olorengradient p-px">
-              <div class="flex flex-row rounded-xl bg-[#F6F9FE] px-6 py-3">
+              <div class="flex flex-row rounded-[11px] bg-[#F6F9FE] px-6 py-3">
                 Download Presentation
                 <i data-feather="download" class="pl-2"></i>
               </div>
@@ -174,7 +179,7 @@ title: "Oloren AI"
       </div>
 
       <button class="olorengradient h-fit w-fit rounded-xl p-px">
-        <div class="rounded-xl bg-[#F6F9FE] px-8 py-3">Contact Us</div>
+        <div class="rounded-[11px] bg-[#F6F9FE] px-8 py-3">Contact Us</div>
       </button>
     </div>
   </section>
