--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ title: "Oloren AI"
 
       <div
         id="links"
-        class="font-lg flex flex-col items-center space-y-2 text-left text-secondary md:items-start"
+        class="font-lg flex flex-col items-center space-y-2 text-left text-secondary"
       >
         <a href="{{site.url}}/#technology">Technology</a>
         <a href="{{site.url}}/#products">Products</a>
