update styles for buttons

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ title: "Oloren AI"
             guaranteed to boost your prediction accuracy.
           </p>
           <div
-            class="flex flex-col space-y-2 child:h-fit child:w-fit child:rounded-xl lg:flex-row lg:items-center lg:space-x-3"
+            class="flex flex-col space-y-2 child:h-fit child:w-fit child:rounded-xl lg:flex-row lg:items-center lg:space-y-0 lg:space-x-3"
           >
             <a
               class="olorengradient p-px"
