--- a/blogs.html
+++ b/blogs.html
@@ -7,15 +7,14 @@ title: "Oloren AI Blogs"
   id="featured-blog"
   class="mx-auto flex h-fit w-full max-w-7xl justify-between px-5 lg:w-3/4"
 >
-  <div class="w-3/5 space-y-4 py-16 lg:py-60">
-    <div id="hero-text" class="w-full space-y-5 pr-4">
+  <div class="w-1/2 space-y-4 py-16 lg:py-48 align-middle">
+    <div id="hero-text" class="w-full space-y-5">
       <h3 class="">Featured Story</h3>
       <h1 class="w-full text-2xl font-normal text-primary">
-        Evaluating Model Uncertainty with Oloren ChemEngine
+        {{site.posts[0].title}}
       </h1>
-      <h2 class="w-full pr-8 text-lg text-secondary lg:w-2/3">
-        This guide walks through creating error models to assess the uncertainty
-        of Oloren ChemEngine models.
+      <h2 class="w-full text-lg text-secondary">
+        {{site.posts[0].excerpt}}
       </h2>
     </div>
     <div class="space-x-8">
@@ -27,19 +26,21 @@ title: "Oloren AI Blogs"
       </button>
     </div>
   </div>
-  <img src="{{ "/assets/images/herofig.svg" | relative_url }}" class="hidden
-  lg:block w-2/5 mx-0" align="left" id="logo" />
+  <div class="w-1/2 h-fit my-auto">
+  <img src={{ site.posts[0].featured_image | relative_url }} class="
+  block w-full h-auto bg-red" align="left" id="logo" />
+  </div>
 </section>
 
 <section
   id="blog-listing"
-  class="mx-auto mb-20 grid h-fit w-full max-w-7xl grid-cols-3 gap-x-6 gap-y-12 lg:w-3/4"
+  class="mx-auto mb-20 flex flex-col space-y-2 lg:space-y-0 lg:grid h-fit w-full max-w-7xl lg:grid-cols-3 lg:gap-x-6 lg:gap-y-12 lg:w-3/4"
 >
-  {% for x in (1..3) %} {% for post in site.posts %}
-  <div class="flex h-fit flex-col space-y-2">
-    <div class="h-64 w-full bg-[#F6F9FE]"></div>
+    {% for post in site.posts %}
+  <a class="flex h-fit flex-col space-y-2" href={{ post.url }}>
+    <img class="h-64 w-full bg-[#F6F9FE]" src={{ post.featured_image | relative_url }} />
     <h1 class="w-full text-xl font-normal text-primary">{{post.title}}</h1>
     <h2 class="w-full pr-8 text-lg text-secondary">{{post.excerpt}}</h2>
-  </div>
-  {% endfor %} {% endfor %}
+  </a>
+  {% endfor %}
 </section>
