--- a/blogs.html
+++ b/blogs.html
@@ -39,7 +39,7 @@ layout: default
 >
   {% for post in site.posts %}
   <a class="flex h-fit flex-col space-y-2" href={{ post.url }}>
-    <img class="h-64 w-auto bg-[#F6F9FE]" src={{ post.featured_image }} />
+    <img class="h-64 w-auto bg-white" src={{ post.featured_image }} />
     <h1 class="w-full text-xl font-normal text-primary">{{post.title}}</h1>
     <h2 class="w-full pr-8 text-lg text-secondary">{{post.excerpt}}</h2>
   </a>
