Finished all blog sites

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@ layout: default
   >
     <div class="space-y-5 py-16 lg:space-y-12 lg:py-60">
       <div id="hero-text" class="w-full space-y-5 pr-4">
-        <h1 class="w-full text-4xl font-normal text-primary lg:w-[65%]">
-          Machine Learning for Drug Discovery. Built by scientists for <b class="font-semibold">scientists</b> .
+        <h1 class="w-full text-4xl font-normal text-primary lg:w-[73%]">
+          Scientific <b class="font-semibold">machine learning for drug discovery</b>. Engineered for results.
         </h1>
 
-        <h2 class="w-full text-lg text-secondary">
-          Systems built with reproducibility, interpretability, and performance <br /> 
-          in mind. Build models with state-of-the-art molecular representations and <br /> 
-          model architectures that can be saved, loaded, and shared in one line. <br />
-          Plus a suite of interpretability tools for analysis. <br />
+        <h2 class="w-full text-lg text-secondary lg:w-[73%]">
+          Systems built with reproducibility, interpretability, and performance
+          in mind. Build models with state-of-the-art molecular representations and
+          model architectures that can be saved, loaded, and shared in a moment.
+          Plus a suite of interpretability tools for analysis.
         </h2>
       </div>
       <div class="space-x-8">
@@ -44,9 +44,9 @@ layout: default
           <h3 class="text-lg font-semibold">ChemEngine</h3>
           <p class="text-lg text-secondary">
             A open-source library for molecular property prediction. Designed for individuals, academia,
-            and small teams, ChemEngine aggregates industry-leading research into a unified framework 
-            that achieves top tier performance on industry benchmarks. Visualizations and interpretability
-            tools enable scientists to derive real insights. 
+            and small teams, ChemEngine aggregates industry-leading research into a unified framework
+            that achieves top tier performance on open benchmarks. Visualizations and interpretability
+            tools enable scientists to derive real insights.
           </p>
           <div
             class="flex flex-col space-y-2 child:h-fit child:w-fit child:rounded-xl lg:flex-row lg:items-center lg:space-y-0 lg:space-x-3"
@@ -77,9 +77,9 @@ layout: default
           <h3 class="text-lg font-semibold">OlorenVec Descriptors</h3>
           <p class="text-lg text-secondary">
             Our state-of-the-art molecular descriptor built with supervised contrastive learning.
-            It leverages the information from millions of publicly curated datasets into a singular 
+            It leverages the information from millions of publicly curated datasets into a singular
             molecular representation, guaranteed to improve performance on ADMET prediction tasks.
-            OlorenVec can also be finetuned on large internal datasets for even better performance. 
+            OlorenVec can also be finetuned on large internal datasets for even better performance.
           </p>
           <div
             class="flex flex-col space-y-2 space-x-3 child:h-fit child:w-fit child:rounded-xl lg:flex-row"
@@ -111,8 +111,8 @@ layout: default
           class="h-10 w-10 p-0 m-0" align="left" id="logo" />
           <h3 class="text-lg font-semibold">ChemEngine Enterprise</h3>
           <p class="text-lg text-secondary">
-            Designed to integrate well in teams. AutoML for selecting the best model. 
-            Powerpoint integration to share visualizations. Dedicated support, feature 
+            Designed to integrate well in teams. AutoML for selecting the best model.
+            Powerpoint integration to share visualizations. Dedicated support, feature
             development, and ML Ops to make using ChemEngine as easy as possible.
           </p>
           <a
@@ -127,9 +127,9 @@ layout: default
           class="h-10 w-10 p-0 m-0" align="left" id="logo" />
           <h3 class="text-lg font-semibold">Analysis Suite</h3>
           <p class="text-lg text-secondary">
-            ChemEngine Enterprise's associated no-code frontend, bundling ChemEngine's 
-            functionality with an easy to use, collaborative interface. Working within 
-            Oloren Analysis Suite is intuitive and seamless. 
+            ChemEngine Enterprise's associated no-code frontend, bundling ChemEngine's
+            functionality with an easy to use, collaborative interface. Working within
+            Oloren Analysis Suite is intuitive and seamless.
           </p>
           <a
             class="flex flex-row text-lg font-medium"
