fixed post added olorenvec

--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@ layout: default
           <div
             class="flex flex-col space-y-2 space-x-3 child:h-fit child:w-fit child:rounded-xl lg:flex-row"
           >
-            <button class="olorengradient p-px">
+            <a class="olorengradient p-px" href="https://oloren-blogcontent.s3.us-east-2.amazonaws.com/olorenvec.pdf" target="_blank">
               <div class="flex flex-row rounded-[11px] bg-[#F6F9FE] px-6 py-3">
                 Download Presentation
                 <i data-feather="download" class="pl-2"></i>
               </div>
-            </button>
+            </a>
           </div>
         </div>
       </div>
