--- a/blogs.html
+++ b/blogs.html
@@ -38,6 +38,10 @@ layout: default
   class="mx-auto mb-20 flex h-fit w-full max-w-7xl flex-col space-y-2 lg:grid lg:w-3/4 lg:grid-cols-3 lg:gap-x-6 lg:gap-y-12 lg:space-y-0"
 >
   {% for post in site.posts %}
+    {% if site.posts[0].url == post.url %}
+      {% continue %}
+    {% endif %}
+
   <a class="flex h-fit flex-col space-y-2" href={{ post.url }}>
     <img class="h-64 w-auto bg-white" src={{ post.featured_image }} />
     <h1 class="w-full text-xl font-normal text-primary">{{post.title}}</h1>
