--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
     <div class="space-y-5 py-16 lg:space-y-12 lg:py-60">
       <div id="hero-text" class="w-full space-y-5 pr-4">
         <h1 class="w-full text-4xl font-normal text-primary lg:w-[73%]">
-          Scientific <b class="font-semibold">machine learning for drug discovery</b>. Engineered for results.
+          Machine learning for  <b class="font-semibold">drug discovery.</b> Fueled by science, engineered for results.
         </h1>
 
         <h2 class="w-full text-lg text-secondary lg:w-[73%]">
