pushed contact us

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@ layout: default
         </h2>
       </div>
       <div class="space-x-8">
-        <button
+        <a
           class="oloren-gradient mt-4 w-fit cursor-pointer rounded-md p-3 px-10 text-lg text-white"
-          href="https://beta.oloren.ai"
+          href="mailto:contact@oloren.ai"
         >
-          Get Started
-        </button>
-        <a class="text-lg text-primary"> Contact Us </a>
+          Contact Us
+        </a>
+          <!-- <a class="text-lg text-primary"> Contact Us </a> -->
       </div>
     </div>
     <img src="{{ "/assets/images/herofig.svg" | relative_url }}" class="hidden
